feat(service,test,ci): improve commit message validation and add tests
extend `CommitService` to handle empty or whitespace commit messages gracefully by enhancing validation logic. introduce unit tests for `CommitService` and `GitService` to cover edge cases and improve reliability. update CI workflow to run tests for better quality assurance.